<resources>
    <string name="app_name">EazyEats</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in_using">Sign in using</string>
    <string name="title_activity_menu_tab">MenuTabActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="title_activity_app_main_menu">AppMainMenu</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="popular">Popular</string>
    <string name="lorem">Lorem ipsum macu macu dolor sit amet, consectetur adipiscing elit. Did nt wan na addm ore la yout stoth e samp le. Donec vehicula sem a malesuada rhoncus. Pellentesque ut dolor a dui porttitor porta lacinia non libero.</string>
    <string name="test">Test</string>
    <string name="test2">Test2</string>
    <string name="add_to_cart">add to cart</string>
</resources>
