<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#fff"
    tools:context="com.example.jerrydengu.eazyeats.LoginActivity">

    <TextView
        android:text="@string/don_t_have_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/donthaveaccount"
        android:textColor="@android:color/holo_orange_dark"/>
    <TextView
        android:text="@string/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/SignUpLogin"
        android:textStyle="normal|bold"
        android:textColor="@android:color/holo_red_dark"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/donthaveaccount"
        android:layout_toEndOf="@+id/donthaveaccount"
        android:layout_marginLeft="43dp"
        android:layout_marginStart="43dp"
        />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="440dp"
        android:background="#fff"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_alignParentTop="true"
            android:layout_marginTop="180dp"
            android:id="@+id/Emaillogin"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textStyle="normal|italic"
            android:hint="@string/email"
            android:textColor="#ffa500"
            android:textAlignment="textStart"
            android:textColorHint="#ffa500"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_below="@+id/Emaillogin"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="210dp"
            android:id="@+id/Passwordlog"
            android:textStyle="normal|bold|italic"
            android:hint="@string/password"
            android:textColorHint="#ffa500"
            android:textColor="#ffa500"
          />

        <TextView
            android:text="@string/sign_in_using"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonsignin"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="320dp"
            android:id="@+id/googleBook"
            android:textColor="@android:color/holo_orange_dark"
            />

        <com.facebook.login.widget.LoginButton
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="370dp"
                android:layout_marginBottom="30dp"/>
        <Button
            android:text="@string/sign_in"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="260dp"
            android:id="@+id/buttonsignin"
            android:textStyle="normal|bold"
            android:textColor="@android:color/holo_orange_dark"
            android:background="@drawable/button_styles"
            android:layout_below="@+id/Passwordlog"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:padding="15dp"
            android:elevation="13dp" />

        <Button
            android:text="Google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/google"
            android:layout_marginTop="370dp"
            android:layout_marginStart="260dp"
            android:layout_below="@+id/googleBook"
            android:layout_alignLeft="@+id/SignUpLogin"
            android:layout_alignStart="@+id/SignUpLogin"
            android:background="@drawable/button_styles"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="#ffa500"
            android:textAlignment="center"
            android:elevation="13dp" />

        <Button
            android:text="Facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/google"
            android:layout_toEndOf="@+id/Passwordlog"
            android:id="@+id/facebook"
            android:layout_marginStart="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="370dp"
            android:background="@drawable/button_styles"
            android:textColor="#ffa500"
            android:textAlignment="center"
            android:elevation="13dp" />
    </android.support.v7.widget.CardView>

</RelativeLayout>
