<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_products2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jerrydengu.eazyeats.Products">

    <android.support.v7.widget.CardView
        android:layout_height="300dp"
        android:layout_width="match_parent"
        android:layout_marginTop="47dp"
        android:id="@+id/ProductsCardView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test2"
            android:textColor="@android:color/holo_orange_dark"
            android:layout_marginTop="239dp"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            android:id="@+id/textView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:text="@string/test"
            android:textColor="#ffa500"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            android:id="@+id/ProductName"
            tools:ignore="RtlHardcoded" />
        <ImageView
            android:layout_width="230dp"
            android:layout_height="155dp"
            android:layout_gravity="center_horizontal"
            android:background="#ffa500"
            android:layout_marginTop="55dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/ProdImageView" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test2"
            android:textColor="@android:color/holo_orange_dark"
            android:layout_marginTop="239dp"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            android:id="@+id/ProductPrice"
 />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="price"
            android:textColor="@android:color/holo_orange_dark"
            android:layout_marginTop="239dp"
            android:layout_marginLeft="79dp"
            android:textSize="18sp"
            android:id="@+id/ProductPriceDig"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_cart"
            android:layout_marginTop="220dp"
            android:textColor="#ffa500"
            android:background="@drawable/button_styles"
            android:padding="15dp"
            android:layout_gravity="end"
            android:layout_marginRight="15dp"
            android:id="@+id/AddToCart" />

    </android.support.v7.widget.CardView>
</RelativeLayout>
